...
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/settings_scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:fillViewport="true">

            <RelativeLayout
...
                    <TextView
                        android:id="@+id/view_openvpn_logs_title"
                        style="@style/SettingsLabelTitle"
                        android:text="@string/settings_view_openvpn_logs_title" />

                    <Button
                        android:id="@+id/view_openvpn_logs_button"
                        style="@style/SmallButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/settings_view_log_button" />

...
