<resources xmlns:tools="http://schemas.android.com/tools"
           tools:locale="en-US">
    <string name="app_name">eduVPN</string>
    <!-- Overrides resource from OpenVPN lib. Reason: bad casing-->
    <string name="clear_log">Clear log</string>

    <string name="error_state_missing">Error: \'state\' parameter not found in callback URL</string>
    <string name="error_access_token_missing">Error: \'accessToken\' parameter not found in callback URL.</string>
    <string name="error_state_mismatch">Error: state mismatch!</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="actionbar_title">eduVPN</string>
    <string name="select_your_country_title">Select your Country</string>
    <string name="select_your_institution_title">Select your Institution</string>
    <string name="select_your_server_title">Select your Server</string>
    <string name="select_your_organization_title">Find your institute</string>
    <string name="custom_provider_title">Add Provider</string>
    <string name="custom_provider_prefix">https://</string>
    <string name="custom_provider_connect">Sign In</string>
    <string name="home_title">Connect to VPN</string>
    <string name="custom_provider_display_name">Custom Provider</string>
    <string name="error_importing_profile">Error importing profile.</string>
    <string name="error_fetching_profile">Error fetching profile. Details: %s</string>
    <string name="error_checking_certificate">Certificate check failed for unexpected reasons.</string>
    <string name="vpn_connection_status_title">VPN connection</string>
    <string name="notifications_switcher_default_title">Notifications</string>
    <string name="connection_switcher_title">Connection Info</string>
    <string name="view_log_button">View Log</string>
    <string name="connection_status_connectivity_problems">Connectivity problems? Try switching to TCP</string>
    <string name="connection_status_reconnect_with_tcp">Reconnect with TCP</string>

    <string name="connection_info_duration">DURATION</string>
    <string name="connection_info_downloaded">DOWNLOADED</string>
    <string name="connection_info_uploaded">UPLOADED</string>
    <string name="connection_info_ipv4">IPv4 ADDRESS</string>
    <string name="connection_info_ipv6">IPv6 ADDRESS</string>
    <string name="connection_info_protocol">PROTOCOL</string>
    <string name="connection_info_protocol_name_wireguard">WireGuard</string>
    <string name="connection_info_protocol_name_openvpn">OpenVPN</string>
    <string name="connection_info_protocol_name_wireguard_with_tcp">WireGuard (TCP)</string>
    <string name="connection_info_protocol_name_openvpn_with_tcp">OpenVPN (TCP)</string>


    <string name="connection_info_state_connecting">Connecting</string>
    <string name="connection_info_state_connected">Connected</string>
    <string name="connection_info_state_paused">Paused</string>
    <string name="connection_info_state_disconnected">Disconnected</string>

    <string name="not_available">N/A</string>
    <string name="already_connected_please_disconnect">You are already connected. Please disconnect first.</string>

    <string name="duration_more_than_one_hour">%1$02d:%2$02d:%3$02d</string>
    <string name="duration_less_than_one_hour">%1$02d:%2$02d</string>

    <string name="traffic_kilobytes">%s kB</string>
    <string name="traffic_megabytes">%s MB</string>
    <string name="traffic_gigabytes">%s GB</string>

    <string name="progress_dialog_title">Just a sec</string>
    <string name="api_discovery_message">Discovering API…</string>
    <string name="vpn_profile_download_message">Downloading VPN profile…</string>
    <string name="display_other_name">Use a Custom Provider</string>
    <string name="maintenance_message">The VPN service will be under maintenance starting from %1$s until %2$s.</string>
    <string name="error_loading_system_messages">Unable to load system messages: %s</string>
    <string name="error_loading_user_messages">Unable to load user messages: %s</string>
    <string name="server_selection_add_server">Add Other Server</string>
    <string name="server_selection_secure_internet">Secure Internet</string>

    <string name="saved_profile_display_name">%1$s - %2$s</string>
    <string name="error_confirm_button">OK</string>
    <string name="error_dialog_title">Unexpected problem</string>
    <string name="error_discover_api">Unable to connect to %1$s: %2$s</string>
    <string name="no_providers_yet_click_on_add_provider">It appears you don\'t have any added providers yet.\nTap on the button below to get started.</string>
    <string name="custom_api_discovery_error">It seems that this provider does not exist, or is not compatible with eduVPN.\nDetails: %s</string>
    <string name="provider_added_new_configs_available">Provider added. You can now select your profile.</string>
    <string name="could_not_fetch_all_profiles">Could not fetch all profiles.</string>
    <string name="cant_connect_application_state_missing">Can\'t connect, application state is missing.</string>
    <string name="callback_error">Callback error: %s</string>
    <string name="rejected_permission">User rejected access for the app.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_prefer_tcp_title">Prefer TCP</string>
    <string name="settings_custom_tabs_opt_out_title">Use Custom Tabs</string>
    <string name="settings_save">Save</string>
    <string name="loading_available_profiles">Loading available profiles…</string>
    <string name="go_back">Back</string>
    <string name="error_while_connecting">An unexpected error occurred while connecting to the VPN provider: %s</string>
    <string name="error_dialog_title_unable_to_connect">Unable to connect</string>
    <string name="undo">Undo</string>
    <string name="button_remove">Remove</string>
    <string name="access_rejected_instance">Access to %s has been rejected.</string>
    <string name="instance_access_warning_message">Could not connect to all providers.</string>
    <string name="data_removed">The provider data was already removed.</string>
    <string name="provider_not_found_retry">Could not find the provider metadata.</string>
    <string name="provider_incorrect_format">Data returned by the provider has an incorrect format</string>
    <string name="vpn_option_label_secure_internet">Safely use the Internet</string>
    <string name="vpn_option_label_institute_access">Connect to your Institute\'s Network</string>
    <string name="header_institute_access">Institute Access</string>
    <string name="header_secure_internet">Secure Internet</string>
    <string name="profile_name_not_found">Unknown profile</string>
    <string name="vpn_profile_creating_keypair">Creating keypair…</string>
    <string name="error_creating_keypair">Error creating keypair. Details: %s</string>
    <string name="error_parsing_keypair">Error parsing keypair. Details: %s</string>
    <string name="error_downloading_vpn_config">Error downloading VPN configuration. Details: %s</string>
    <string name="authorization_error_title">Authorization error</string>
    <string name="authorization_error_message">Error: %1$s, code: %2$d, message: %3$s</string>
    <string name="connecting_to_api_title">Connecting</string>
    <string name="connecting_to_api_message">Connecting to %s…</string>
    <string name="title_choose_your_profile">Choose a Profile</string>
    <string name="description_choose_your_profile">Select how you want to use the VPN</string>
    <string name="add_other_address">Add Other Provider</string>
    <string name="error_selected_instance_not_found">Selected instance not found.</string>
    <string name="no_provider_found">No provider found.</string>
    <string name="no_match_found">No match found.</string>
    <string name="discovering_organizations">Discovering organizations...</string>
    <string name="discovering_providers">Discovering providers...</string>
    <string name="description_secure_internet_provider">Select your institution\'s country here. Afterwards you can use other countries.</string>
    <string name="vpn_profile_checking_certificate">Checking certificate validity...</string>
    <string name="error_parsing_certificate">Unexpected certificate check response from API.</string>
    <string name="error_certificate_disabled">Connection process aborted because certificate has been disabled.</string>
    <string name="error_user_disabled">Connection process has been aborted because the user has been disabled on the server.</string>
    <string name="error_dialog_title_invalid_certificate">Invalid certificate</string>
    <string name="example_domain">example.org</string>
    <string name="licenses_title">Software licenses</string>
    <string name="settings_licenses_title">Software Licenses</string>
    <string name="settings_licenses_button">View licenses</string>
    <string name="select_a_server_title">Select a server</string>
    <string name="delete_server">Delete server</string>
    <string name="delete_server_message">Are you sure you want to remove the server \'%1$s\' (%2$s) with all its profiles?</string>
    <string name="delete_server_cancel">Cancel</string>
    <string name="error_parsing_profiles">Unable to parse the profile list.</string>
    <string name="select_a_profile_title">Select a profile</string>
    <string name="loading_browser_for_authorization">Loading browser for authorization</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_no_internet_connection_message">It seems that you have no connection to the internet. Please check your connection, and try again.\nOriginal error: %s</string>
    <string name="select_your_organization_search_hint">Search for your organization...</string>
    <string name="fetching_organization_servers">Fetching organizations...</string>
    <string name="fetching_server_list">Fetching latest server list...</string>
    <string name="error_fetching_organization_servers">Error fetching organization servers</string>
    <string name="discovering_group_servers">Discovering group servers...</string>
    <string name="reset_app_data_title">Reset Organization. This will delete all your saved profiles and authorization data. After the reset, you will have to choose an organization again.</string>
    <string name="reset_app_data_button">Reset</string>
    <string name="reset_data_dialog_title">Are you sure?</string>
    <string name="reset_data_dialog_message">Do you want to remove all VPN profiles and connection-related data?</string>
    <string name="reset_data_dialog_yes">Yes</string>
    <string name="reset_data_dialog_no">No</string>
    <string name="add_server_title">Server address</string>
    <string name="add_server_hint">Enter server address here</string>
    <string name="add_server_button">Add server</string>
    <string name="select_organization">Select organization</string>

    <string name="warning_group_fetch_failed_no_cache">Discovering the server group for the server \'%s\' has failed. Not all instances might be visible in the list below.</string>
    <string name="warning_group_fetch_failed_with_cache">Server group discovery failed for the server \'%s\'. Group instances were loaded from cache and might be outdated.</string>
    <string name="warning_group_fetch_unexpected_error">An unexpected error happened during the discovery of grouped servers. The displayed list might be incomplete.</string>
    <string name="warning_title">Warning</string>
    <string name="error_server_discovery_title">Discovery error</string>
    <string name="error_organization_not_listed">Organization not listed anymore.</string>
    <string name="error_server_not_found_in_organization_single">The server %s is not listed in the organization servers anymore.</string>
    <string name="error_server_not_found_in_organization_multiple">The servers %s are not listed in the organization servers anymore.</string>
    <string name="delete_organization_server_from_settings">You can reset your organization from the settings screen.</string>
    <string name="error_no_profiles_from_server">No profiles found</string>
    <string name="error_no_profiles_from_server_message">The server did not return any VPN profiles which the application could connect to.</string>
    <string name="error_no_supported_profiles_from_server">No supported profiles found</string>
    <string name="header_other_servers">Other Servers</string>
    <string name="header_connect_your_own_server">Connect your own server</string>
    <string name="header_button_change_location">Change Location</string>
    <string name="error_countries_are_not_available">Unable to load list of countries.</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="connection_info">Connection info</string>
    <string name="connection_info_support">Support: %s</string>
    <string name="connection_certificate_status_expired">This session is expired.</string>
    <plurals name="certificate_status_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="certificate_status_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="certificate_status_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="certificate_status_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="connection_certificate_status_valid_for_one_part"><![CDATA[Valid for <b>%s</b>]]></string>
    <string name="connection_certificate_status_valid_for_two_parts"><![CDATA[Valid for <b>%1$s</b> and <b>%2$s</b>]]></string>
    <string name="error_certificate_expired_title">Session expired</string>
    <string name="error_certificate_expired_message">You were disconnected because your session has expired. Connect again to reauthenticate.</string>
    <string name="settings_view_log_button">View Logs</string>
    <string name="settings_view_openvpn_logs_title">OpenVPN logs</string>
    <string name="settings_view_api_logs_title">API logs</string>
    <string name="warning_no_organization_title">No organization</string>
    <string name="ok">OK</string>
    <string name="warning_no_organization_message">You have no connected organization.</string>
    <string name="connection_select_profile">Select profile</string>
    <string name="connection_warning_disconnect_first_title">VPN connected</string>
    <string name="connection_warning_disconnect_first_message">To switch between profiles, you need to disconnect first using the toggle.</string>
    <string name="connection_warning_disconnect_first_ok_button">OK</string>
    <string name="connection_info_renew_session">Renew Session</string>
    <string name="cert_expiry_channel_name">VPN certificate expired warning</string>
    <string name="cert_expiry_notification_title">VPN certificate about to expire</string>
    <string name="cert_expiry_notification_text">The VPN certificate is about to expire</string>
    <string name="vpn_connection_channel_name">VPN connection status</string>
    <string name="error_starting_up_proxyguard_failed">Starting up of ProxyGuard failed</string>
</resources>
