...
                android:contentDescription="@string/content_description_application_logo"
                android:src="@drawable/ic_application_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/settingsButton"
                android:layout_width="@dimen/actionbar_icon_size"
                android:layout_height="@dimen/actionbar_icon_size"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/content_description_settings_button"
                android:padding="8dp"
                android:src="@drawable/ic_settings"
...
